add cmc